# pxeApplication

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ansible/playbooks/: postinstall-example.yml
app/: __init__.py  bootstrap.py  database.py  dependencies.py  dhcp_detect.py  dhcp_probe_server.py  distros.py  main.py  manage.py  media_import.py  models.py  schemas.py  security.py  settings.py  templating.py
app/routers/: assets.py  auth.py  boot.py  hosts.py  images.py  post_install.py  profiles.py  ui.py
app/services/: __init__.py  ansible_runner.py  audit.py  builds.py  config_render.py  dhcp_probe.py  ipxe.py  media_jobs.py  profiles.py  setup_status.py  unattended.py
nginx/: default.conf
pxe_templates/autoinstall/: ubuntu.yaml.j2
pxe_templates/kickstart/: rhel.ks.j2
pxe_templates/preseed/: debian.cfg.j2
pxe_templates/windows/: autounattend.xml.j2
scripts/: check_dhcp.sh  import_iso.sh  prepare_media.sh  setup.sh
templates/: ansible_runs.html  asset_detail.html  assets.html  base.html  events.html  host_detail.html  hosts.html  image_detail.html  images.html  index.html  login.html  post_install.html  profile_detail.html  profiles.html
tests/: test_ansible_runner.py  test_config_render.py  test_dhcp_detect.py  test_distros.py  test_ipxe.py  test_media_import.py  test_media_jobs.py  test_security.py  test_setup_status.py  test_ui_workflows.py  test_unattended_boot.py
