[project]
name = "pxe-app"
version = "0.1.0"
description = "FastAPI control plane for unattended Windows and Linux desktop provisioning over PXE/iPXE"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "starlette>=0.40.0,<0.42.0",
  "uvicorn[standard]>=0.30.0,<0.48.0",
  "sqlalchemy>=2.0.30,<2.1.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "itsdangerous>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0,<4.1.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "ansible-core>=2.16.0,<2.20.0",
  "pywinrm>=0.4.3,<0.6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0,<10.0.0",
  "httpx>=0.27.0,<0.29.0",
]

[project.scripts]
pxe-app = "app.main:run"
pxe-admin = "app.manage:main"
pxe-import-media = "app.media_import:main"
pxe-check-dhcp = "app.dhcp_detect:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
